multiarch: MA-4 — plugin collision gates + dual-layout readers + Automatic-Module-Name
- SN link path: discoverManifests task fails with the prescriptive message on
  manifest-declared collisions (NativeProviderSettings.failOnCollisions)
- extraction: nativeLibExtract fails when two different JARs would write the
  same target file (content-based check via new NativeExtract.nativeLibEntries)
- collisionCheckSettings + nativeProviderCheckCollisions task for JVM consumers
  that do not enable NativeProviderPlugin; documented in README
- dual-layout readers: findNativeLibJars/extractFromJar accept the versioned
  native/<artifact>/<version>/<classifier>/ layout (strict .toVector — 2.12's
  lazy Iterator.toSeq outlived the open JarFile); AndroidBuild accepts both
  layouts with per-APK dedupe
- Automatic-Module-Name manifest attributes: multiarch.core, multiarch.panama.api,
  multiarch.panama.jdk (plan §4.3)
- 4 new dual-layout reader tests